add UI features

--- a/index.html
+++ b/index.html
@@ -1,19 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Rock-Paper-Scissors</title>
 </head>
+
 <body>
-    <button id="rock">Rock</button>
-    <br>
-    <button id="paper">Paper</button>
-    <br>
-    <button id="scissors">Scissors</button>
+    <h1>ROCK, PAPER, SCISSORS GO!</h1>
+    <div id="container">
+        <button id="Rock">Rock</button>
+        <br>
+        <button id="Paper">Paper</button>
+        <br>
+        <button id="Scissors">Scissors</button>
+
+        <p id="computer-choice"></p>
+        <p id="player-selection"></p>
+        <p id="result"></p>
+
+
+        <p id="player-score"></p>
+        <p id="computer-score"></p>
+        <p id="game-over"></p>
+    </div>
+
 
 
     <script src="script.js"></script>
 </body>
+
 </html>
